# home_work_19.1

./: README.md  index.html  main.py  pyproject.toml
